--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -138,7 +138,7 @@
         margin: 0;
 
         img {
-            width: 350%;
+            width: 100%;
             padding: 10px;
             max-width: fit-content;
         }
@@ -174,6 +174,27 @@
         p {
             width: 90%;
             max-width: 450px;
+        }
+    }
+
+    .articles__links--purple {
+        &:hover {
+            border-left: 8px solid var(--color2);
+            color: var(--color2);
+        }
+    }
+
+    .articles__links--green {
+        &:hover {
+            border-left: 8px solid var(--color3);
+            color: var(--color3);
+        }
+    }
+
+    .articles__links--blue {
+        &:hover {
+            border-left: 8px solid var(--color1);
+            color: var(--color1);
         }
     }
 
